--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
