--- a/src/CTC/styles.css
+++ b/src/CTC/styles.css
@@ -18,6 +18,13 @@
 	z-index: 1;
 }
 
+.showControlPanelButton {
+	position: absolute;
+	bottom: 25px;
+	left: 50%;
+	z-index: 1;	
+}
+
 .buttonDiv {
 	display: flex;
 	flex-direction: row;
@@ -42,4 +49,22 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	padding: 24px 32px;
+}
+
+.controlPanelHolder {
+	display: flex;
+	flex-direction: row;
+	align-items: stretch;
+	justify-content: space-evenly;
+	height: 100%;
+	padding: 24px 24px;
+}
+
+.controlPanelSection {
+	border-radius: 25px;
+	border: 2px solid #EFEFEF;
+	margin: 15px;
+	flex-grow: 1;
+	height: 100%;
 }
