--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-.trainButton {
+.trainButton, .waysideButton {
 	width: 100%;
 	border-radius: 15px !important; 
 	box-shadow: 0px 3px 10px rgba(0,0,0,.25);
@@ -11,11 +11,22 @@
 	box-shadow: 0px 3px 10px rgba(0,0,0,.25);
 }
 
-.showTrainButton {
+.showTrainButton{
 	position: absolute;
 	top: 100px;
 	left: 100px;
 	z-index: 1;
+}
+
+.showWaysideControllersButton {
+	/* position: absolute;
+	top: 100px;
+	left: 100px;
+	z-index: 1; */
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
 
 .showControlPanelButton {
@@ -44,7 +55,7 @@
 	width: 50%;
 }
 
-.trainPanelHolder {
+.trainPanelHolder, .waysidePanelHolder {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
