--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-.trainButton, .waysideButton {
+.trainButton {
 	width: 100%;
 	border-radius: 15px !important; 
 	box-shadow: 0px 3px 10px rgba(0,0,0,.25);
@@ -10,17 +10,6 @@
 	top: 100px;
 	left: 100px;
 	z-index: 1;
-}
-
-.showWaysideControllersButton {
-	/* position: absolute;
-	top: 100px;
-	left: 100px;
-	z-index: 1; */
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
 }
 
 .showControlPanelButton {
@@ -49,7 +38,7 @@
 	width: 50%;
 }
 
-.trainPanelHolder, .waysidePanelHolder {
+.trainPanelHolder {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
