--- a/src/WaysideController/styles.css
+++ b/src/WaysideController/styles.css
@@ -48,6 +48,8 @@
 	padding: 24px 32px;
 }
 
+
+/* Bottom Panel Styles */
 .bottomPanel {
     /* margin-left: 14em; */
 }
@@ -61,11 +63,76 @@
 	padding: 24px 24px;
 }
 
-.bottomPanelSection {
+/* Upload PLC section styles*/
+.uploadPLCSection {
 	border-radius: 25px;
 	border: 2px solid #EFEFEF;
 	margin: 15px;
 	margin-top: 10px;
-	flex-grow: 1;
 	height: 100%;
+	text-align: center;
+	font-weight: bold;
+	font-size: large;
+	flex-grow: 1;
+}
+
+.uploadPLCButton {
+	width: 100%;
+	border-radius: 15px !important; 
+	box-shadow: 0px 3px 10px rgba(0,0,0,.25);
+	margin-bottom: 25px;
+	margin-top: 5em;
+}
+
+.moveSwitchSection {
+	border-radius: 25px;
+	border: 2px solid #EFEFEF;
+	margin: 15px;
+	margin-top: 10px;
+	height: 100%;
+	text-align: center;
+	font-weight: bold;
+	font-size: large;
+	flex-grow: 1;
+}
+
+/* Data section styles */
+.dataSection {
+	border-radius: 25px;
+	border: 2px solid #EFEFEF;
+	margin: 15px;
+	margin-top: 10px;
+	height: 100%;
+	text-align: center;
+	flex-grow: 3;
+}
+
+.dataContainer {
+	display: flex;
+	flex-direction: row;
+	height: 100%;
+}
+
+.dataLeft {
+	flex-grow: 1;
+	text-align: left;
+}
+
+.dataRight {
+	flex-grow: 1;
+	text-align: left;
+}
+
+.dataName {
+	display: flex;
+	flex-direction: row;
+	padding-left: 2em;
+	margin-top: 1em;
+	font-weight: bold;
+	font-size: large;
+}
+
+.dataValue {
+	padding-left: 1em;
+	font-weight: 500;
 }
