--- a/src/CTC/styles.css
+++ b/src/CTC/styles.css
@@ -85,7 +85,7 @@
 .controlPanelDivider {
 	border-left: 1px solid #EFEFEF;
 	border-right: 1px solid #EFEFEF;
-	height: 80%;
+	height: 80%
 }
 
 .controlPanelValueContainer {
