--- a/src/WaysideController/styles.css
+++ b/src/WaysideController/styles.css
@@ -6,25 +6,25 @@
 }
 
 .showWaysideControllersButton {
-  /* position: absolute;
-	top: 100px;
-	left: 100px;
-	z-index: 1; */
-  display: flex;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  z-index: 1;
+  /* display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .showBottomPanelButton {
-  /* position: absolute;
-	bottom: 25px;
-	left: 50%;
-	z-index: 1; */
-  display: flex;
+  position: absolute;
+  bottom: 25px;
+  left: 50%;
+  z-index: 1;
+  /* display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .buttonDiv {
@@ -118,6 +118,49 @@
   display: flex;
   flex-direction: row;
   height: 100%;
+}
+
+.switch1Style {
+  position: absolute;
+  bottom: 12.4em;
+  left: 54.2%;
+  z-index: 1;
+}
+
+.switch2Style {
+  transform: rotate(90deg);
+  position: absolute;
+  bottom: 17.5em;
+  left: 54%;
+  z-index: 1;
+}
+
+.blockButton1 {
+  position: absolute;
+  bottom: 25em;
+  left: 50%;
+  z-index: 1;
+}
+
+.blockButton2 {
+  position: absolute;
+  bottom: 30em;
+  left: 60%;
+  z-index: 1;
+}
+
+.blockButton3 {
+  position: absolute;
+  bottom: 20em;
+  left: 60%;
+  z-index: 1;
+}
+
+.blockButton4 {
+  position: absolute;
+  bottom: 20em;
+  left: 70%;
+  z-index: 1;
 }
 
 .blockSelect {
