temp line filter

--- a/src/CTC/styles.css
+++ b/src/CTC/styles.css
@@ -18,6 +18,13 @@
 	z-index: 1;
 }
 
+.filterLineButton {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 1;
+}
+
 .showControlPanelButton {
 	position: absolute;
 	bottom: 25px;
