--- a/src/CTC/styles.css
+++ b/src/CTC/styles.css
@@ -1,142 +1,142 @@
 .trainButton {
-	width: 100%;
-	border-radius: 15px !important; 
-	box-shadow: 0px 3px 10px rgba(0,0,0,.25);
-	margin-bottom: 25px;
+  width: 100%;
+  border-radius: 15px !important;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
+  margin-bottom: 25px;
 }
 
 .trainButton {
-	width: 100%;
-	border-radius: 15px !important; 
-	box-shadow: 0px 3px 10px rgba(0,0,0,.25);
+  width: 100%;
+  border-radius: 15px !important;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
 }
 
 .showTrainButton {
-	position: absolute;
-	top: 100px;
-	left: 100px;
-	z-index: 1;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  z-index: 1;
 }
 
 .filterLineButton {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	z-index: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
 }
 
 .showControlPanelButton {
-	position: absolute;
-	bottom: 25px;
-	left: 50%;
-	z-index: 1;	
+  position: absolute;
+  bottom: 25px;
+  left: 50%;
+  z-index: 1;
 }
 
 .buttonDiv {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .buttonText {
-	margin: 5px;
-	margin-left: 10px;
-	font-size: 1.5em;
+  margin: 5px;
+  margin-left: 10px;
+  font-size: 1.5em;
 }
 
 .addTrainButton {
-	border-radius: 100px !important;
-	box-shadow: 0px 3px 10px rgba(0,0,0,.25);
-	width: 50%;
+  border-radius: 100px !important;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
+  width: 50%;
 }
 
 .trainPanelHolder {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	padding: 24px 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 24px 32px;
 }
 
 .controlPanelHolder {
-	display: flex;
-	flex-direction: row;
-	align-items: stretch;
-	justify-content: space-evenly;
-	padding: 24px 24px;
-	/* background: grey; */
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: space-evenly;
+  padding: 24px 24px;
+  /* background: grey; */
 }
 
 .controlPanelSection {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	border-radius: 25px;
-	border: 2px solid #EFEFEF;
-	margin: 15px;
-	margin-top: 10px;
-	flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 25px;
+  border: 2px solid #efefef;
+  margin: 15px;
+  margin-top: 10px;
+  flex-grow: 1;
 }
 
 .controlPanelSectionHeaderLabel {
-	position: absolute;
-	width: 100%;
-	background: grey;
+  position: absolute;
+  width: 100%;
+  background: grey;
 }
 
 .controlPanelSubSection {
-	margin-left: 10px;
-	margin-right: 10px;
-	flex-grow: 1;
+  margin-left: 10px;
+  margin-right: 10px;
+  flex-grow: 1;
 }
 
 .controlPanelDivider {
-	border-left: 1px solid #EFEFEF;
-	border-right: 1px solid #EFEFEF;
-	height: 80%
+  border-left: 1px solid #efefef;
+  border-right: 1px solid #efefef;
+  height: 80%;
 }
 
 .modeSection {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
 }
 
 .button {
-	flex-grow: 1;
-	margin: 10px;
-	margin-left: 25px;
-	margin-right: 25px;
-	border-radius: 25px;
+  flex-grow: 1;
+  margin: 10px;
+  margin-left: 25px;
+  margin-right: 25px;
+  border-radius: 25px;
 }
 
 .controlPanelValueContainer {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content:space-between;
-	margin: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin: 15px;
 }
 
 .controlPanelValueUnitLabel {
-	display: flex;
-	justify-content: space-between;
-	flex-direction: row;
-	border: 1px solid darkgrey;
-	border-radius: 100px;
-	box-shadow: inset 0px 0px 5px rgba(0, 0, 0, .2);
-	width: 150px;
-	padding: 3px;
-	padding-left: 10px;
-	padding-right: 10px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  border: 1px solid darkgrey;
+  border-radius: 100px;
+  box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.2);
+  width: 150px;
+  padding: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 svg {
-	pointer-events: none;
+  pointer-events: none;
 }
 
 path {
-	pointer-events: auto;
+  pointer-events: auto;
 }
